# daikintest

./: README  daikintest.cpp  daikintest.h
daikintest_lib_src/: CMakeLists.txt  daikintest.cpp  daikintest.h  daikintest.lib  daikintest_lib_src.lib
gtest-daikintest/: gtest-daikintest.sln
gtest-daikintest/gtest-daikintest/: daikintest_unittest.cpp  gtest-daikintest.vcxproj
gtest-daikintest/gtest-daikintest/x64/Debug/: gtest-daikintest.exe.recipe  gtest-daikintest.vcxproj.FileListAbsolute.txt
gtest-daikintest/gtest-daikintest/x64/Debug/gtest-daikintest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  gtest-daikintest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
